feat: add usage dashboard

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,8 @@
   "permissions": [
     "storage",
     "alarms",
+    "tabs",
+    "windows",
     "declarativeNetRequest",
     "declarativeNetRequestWithHostAccess"
   ],
